# agentify-design2code

./: LANGCHAIN_SETUP.md  README.md  main.py  pyproject.toml  test_visual_metrics.py
.cursor/rules/: python-env.mdc
data/: 11-gpt5-v2.html  11gen.html
src/: __init__.py  launcher.py
src/evaluation/: __init__.py  block_detector.py  block_matcher.py  screenshot_generator.py  similarity_metrics.py  visual_evaluator.py
src/green_agent/: __init__.py  agent.py  design2code_env.py  design2code_green_agent.toml
src/my_util/: my_a2a.py
src/white_agent/: __init__.py  adk_client.py  agent.py  langchain_agent.py  langserve_app.py
src/white_agent/examples/: a2a_compatibility.py  agent_tool_usage.py  basic_adk_usage.py  langchain_usage.py
tests/: README.md  __init__.py  test_block_detector.py
