[project]
name = "agentify-design2code"
version = "0.1.0"
description = "Agentified Design2Code - Assessment framework for HTML generation from screenshots."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[http-server]>=0.3.8",
    "dotenv>=0.9.9",
    "litellm>=1.0.0",
    "typer>=0.19.2",
    "uvicorn>=0.37.0",
    "pillow>=10.0.0",
]
